added dark theme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Lexicon frontend trainin excersise" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, CSS, Lexicon">
-    <link rel="stylesheet" href="..\node_modules\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -51,12 +51,12 @@
         </nav>
     </header>
 
-    <section bg-primary text-light p-5>
+    <div class="bg-primary text-light p-5">
         <div class="container-fluid justify-content-between align-items-center p-3 m-2">
 
             <div class="row" id="images-top">
                 <div class="col-md-4 img-left images-top"><img src="https://svg-clipart.com/svg/black/gk1SxbT-kerberos-vector.svg" height="300" width="300" alt="random image" class="rounded"></div>
-                <div class="col-md-4 img-center images-top"><img src="https://cdna.artstation.com/p/assets/images/images/029/489/972/large/swapnil-lambe-swaptrap-img-1748.jpg?1597719453" alt="random image" height="300" width="300" class="rounded" /></div>
+                <div class="col-md-4 img-center images-top"><img src="https://svg-clipart.com/svg/black/gk1SxbT-kerberos-vector.svg" alt="random image" height="300" width="300" class="rounded" /></div>
                 <div class="col-md-4 img-right images-top"> <img src="https://svg-clipart.com/svg/black/gk1SxbT-kerberos-vector.svg" alt="kerberos dogs" height="300" width="300" class="rounded" />
                 </div>
 
@@ -109,9 +109,8 @@
                                 Content:
                             </h4>
                             <ul>
-                                <li>
-                                    <h4>Articles</h4>
-                                    <ul>
+                                <h6>Articles</h6>
+                                    
                                         <li class="nav-item">
                                             <a class="nav-link" href="#article-left">A new identity</a>
                                         </li>
@@ -123,10 +122,11 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#sub-article-right">Strange dogs</a>
-                                    </ul>
-                                    </li>
+                                        </li>
+                           </ul>
                         </aside>
                     </div>
+
                     <div id="main-content" class="col-md-8">
                         <div class="row" id="main-content-articles">
                             <div class="col">
@@ -277,7 +277,7 @@ When Cara returns with Xan, Cara's father separates Xan and Cara, slashes the fo
             </div>
             <!-- end container --->
 
-    </section>
+          </div>
 
     <footer class="footer mt-auto py-3 bg-light" id="footer">
         <div class="container">
